improved swagger, fix bugs
